license: change to `AGPL-3.0-or-later`
* open-source modifications are more interesting :)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ exclude = [
   "/soundboards",
   "/extern",
 ]
-license = "Unlicense"
+license = "AGPL-3.0-or-later"
 name = "soundboard"
 repository = "https://github.com/gamebooster/soundboard"
 version = "0.0.2"
