--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ codegen-units = 1
 lto = "fat"
 
 [features]
-autoloop = ["libpulse-binding", "ctrlc"]
+autoloop = ["libpulse-binding", "ctrlc", "nix"]
 default = ["mp3", "flac", "vorbis", "wav", "http", "opus"]
 flac = ["claxon"]
 full = ["default", "spotify", "telegram-bot", "xm", "textui", "gui", "text-to-speech"]
@@ -74,6 +74,7 @@ tokio-core = {version = "0.1", optional = true}
 
 ctrlc = {version = "3.1.6", features = ["termination"], optional = true}
 libpulse-binding = {version = "2.16", default-features = false, features = ["pa_v8"], optional = true}
+nix = {version = "0.18", optional = true}
 
 iced = {version = "0.1", optional = true, features = ["tokio"]}
 iced_native = {version = "0.2", optional = true}
