panic: add message box to see error without console

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
             target
           key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install autoconf and pulseaudio
-        run: sudo apt-get install autoconf libtool automake libpulse0
+        run: sudo apt-get install autoconf libtool automake libpulse0 libgtk-3-dev
       - name: Build debug soundboard binary
         run: cargo build --verbose --features full,autoloop
       - name: Run tests
