--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -22,7 +22,7 @@ jobs:
             target
           key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install autoconf and pulseaudio
-        run: sudo apt-get install autoconf libtool automake libpulse0
+        run: sudo apt-get install autoconf libtool automake libpulse0 libgtk-3-dev
       - name: Build soundboard binary
         run: cargo build --verbose --release --features full,autoloop
       - name: Archive soundboard binary
