--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ indexmap = "1.5"
 log = "0.4"
 mime_guess = "2.0.3"
 miniaudio = "0.10.0"
+msgbox = "0.5.0"
 once_cell = "1.4"
 owning_ref = "0.4"
 parking_lot = "0.11"
