--- a/.github/workflows/format_and_clippy.yml
+++ b/.github/workflows/format_and_clippy.yml
@@ -4,12 +4,12 @@ jobs:
   format_check:
     runs-on: ubuntu-latest
     steps:
-    - uses: hecrj/setup-rust-action@v1
-      with:
-        components: rustfmt
-    - uses: actions/checkout@master
-    - name: Check format
-      run: cargo fmt --all -- --check
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          components: rustfmt
+      - uses: actions/checkout@master
+      - name: Check format
+        run: cargo fmt --all -- --check
 
   clippy_check:
     runs-on: ubuntu-latest
@@ -17,9 +17,11 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
-            toolchain: nightly
-            components: clippy
-            override: true
+          toolchain: nightly
+          components: clippy
+          override: true
+      - name: Install needed deps on linux
+        run: sudo apt-get install autoconf libtool automake libpulse0 libgtk-3-dev
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
