--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,48 +37,49 @@ xm = ["libxm-soundboard"]
 anyhow = "1"
 backtrace = "0.3"
 bytes = "0.5"
-clap = "3.0.0-beta.1"
-crossbeam-channel = "0.4"
+clap = "2"
+crossbeam-channel = "0.5"
 dirs = "3"
-env_logger = "0.7"
+env_logger = "0.8"
 hotkey-soundboard = {path = "extern/hotkey-rs", version = "0.0.3"}
-indexmap = "1.5"
+indexmap = "1.6"
 log = "0.4"
 mime_guess = "2.0.3"
 miniaudio = "0.10.0"
-msgbox = "0.5.0"
-once_cell = "1.4"
+msgbox = "0.6"
+once_cell = "1.5"
 owning_ref = "0.4"
 parking_lot = "0.11"
+paste = "1.0"
 regex = "1"
 reqwest = {version = "0.10", features = ["blocking"]}
-rust-embed = {version = "5.6.0", features = ["interpolate-folder-path"]}
+rust-embed = {version = "5.7.0", features = ["interpolate-folder-path"]}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-strum = "0.19.1"
-strum_macros = "0.19.1"
+strum = "0.20"
+strum_macros = "0.20"
 thiserror = "1"
 tokio = {version = "0.2", features = ["macros", "full", "sync", "time"]}
 toml = "0.5"
 ulid = {version = "0.4", features = ["serde"]}
 webbrowser = "0.5.5"
-winit = "0.22"
+winit = "0.24"
 
 prost = {version = "0.6", optional = true}
-tonic = {version = "0.3.0", features = ["prost", "tls", "tls-roots"], optional = true}
+tonic = {version = "0.3", features = ["prost", "tls", "tls-roots"], optional = true}
 
 fuzzy-matcher = {version = "0.3", optional = true}
-tgbot = {version = "0.10", optional = true}
+tgbot = {version = "0.11", optional = true}
 
 librespot = {version = "0.1.3", optional = true, default-features = false}
 tokio-core = {version = "0.1", optional = true}
 
-ctrlc = {version = "3.1.6", features = ["termination"], optional = true}
-libpulse-binding = {version = "2.16", default-features = false, features = ["pa_v8"], optional = true}
-nix = {version = "0.18", optional = true}
+ctrlc = {version = "3.1", features = ["termination"], optional = true}
+libpulse-binding = {version = "2.22", default-features = false, features = ["pa_v8"], optional = true}
+nix = {version = "0.19", optional = true}
 
-iced = {version = "0.1", optional = true, features = ["tokio"]}
-iced_native = {version = "0.2", optional = true}
+iced = {version = "0.2", optional = true, features = ["tokio_old"]}
+iced_native = {version = "0.3", optional = true}
 
 futures = {version = "0.3", optional = true}
 warp = {version = "0.2", optional = true}
@@ -88,13 +89,13 @@ claxon = {version = "0.4", optional = true}
 hound = {version = "3", optional = true}
 lewton = {version = "0.10", optional = true}
 libxm-soundboard = {version = "0.0.3", path = "extern/libxm-rs", optional = true}
-minimp3 = {version = "0.3", optional = true}
+minimp3 = {version = "0.5", optional = true}
 mp3-duration = {version = "0.1.10", optional = true}
 ogg = {version = "0.7", optional = true}
 ogg_metadata = {version = "0.4", optional = true}
 
-crossterm = {version = "0.17", optional = true}
-tui = {version = "0.10", optional = true, default-features = false, features = ['crossterm']}
+crossterm = {version = "0.18", optional = true}
+tui = {version = "0.13", optional = true, default-features = false, features = ['crossterm']}
 
 [build-dependencies]
 fs_extra = "1"
